default/objects/CCS_Limit__c/CCS_Limit__c.object-meta.xml
<CustomObject>
    <description>Firemní domácí karta, Firemní domácí karta s dodatečnými službami (CCS Limit, Limit+).</description>
    <label>CCS Limit</label>
    <nameField>
        <label>Název objednávky (CCS Limit)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCS Limit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>