default/objects/CCS_Limit__c/fields/Celkova_cena__c.field-meta.xml
<CustomField>
    <fullName>Celkova_cena__c</fullName>
    <description>Celková cena.</description>
    <inlineHelpText>Celková cena.</inlineHelpText>
    <label>Celková cena</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>