default/objects/CCS_Limit__c/fields/Cislo_obchodniho_zastupce__c.field-meta.xml
<CustomField>
    <fullName>Cislo_obchodniho_zastupce__c</fullName>
    <description>Číslo obchodního zástupce.</description>
    <inlineHelpText>Číslo obchodního zástupce.</inlineHelpText>
    <label>Číslo obchodního zástupce</label>
    <length>20</length>
    <type>Text</type>
</CustomField>