default/objects/CCS_Limit__c/fields/Druh_nabidky__c.field-meta.xml
<CustomField>
    <fullName>Druh_nabidky__c</fullName>
    <description>Druh nabídky (vyberte si kartu a plaťte pouze to, co potřebujete).</description>
    <inlineHelpText>Druh nabídky (vyberte si kartu a plaťte pouze to, co potřebujete).</inlineHelpText>
    <label>Druh nabídky</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CCS Limit Moje síť 2015</fullName>
            </value>
            <value>
                <fullName>Limit+</fullName>
            </value>
            <value>
                <fullName>Limit+ Mini</fullName>
            </value>
            <value>
                <fullName>Akční nabídka CCS Limit Fix 97</fullName>
            </value>
            <value>
                <fullName>CCS Limit Moje síť</fullName>
            </value>
            <value>
                <fullName>CCS Limit Moja sieť</fullName>
            </value>
            <value>
                <fullName>CCS Limit T</fullName>
            </value>
            <value>
                <fullName>Akční nabídka CCS Limit Eso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>