default/objects/CCS_Limit__c/fields/Mesicni_fixni_platba_za_kartu__c.field-meta.xml
<CustomField>
    <fullName>Mesicni_fixni_platba_za_kartu__c</fullName>
    <description>Měsíční fixní platba za kartu.</description>
    <inlineHelpText>Měsíční fixní platba za kartu.</inlineHelpText>
    <label>Měsíční fixní platba za kartu</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>