default/objects/CCS_Limit__c/fields/Mesicni_vyuctovani_emailem__c.field-meta.xml
<CustomField>
    <fullName>Mesicni_vyuctovani_emailem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Měsíční vyúčtování - emailem.</description>
    <inlineHelpText>Měsíční vyúčtování - emailem.</inlineHelpText>
    <label>Měsíční vyúčtování - emailem</label>
    <type>Checkbox</type>
</CustomField>