default/objects/CCS_Limit__c/fields/Mesicni_vyuctovani_postou__c.field-meta.xml
<CustomField>
    <fullName>Mesicni_vyuctovani_postou__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Měsíční vyúčtování - poštou.</description>
    <inlineHelpText>Měsíční vyúčtování - poštou.</inlineHelpText>
    <label>Měsíční vyúčtování - poštou</label>
    <type>Checkbox</type>
</CustomField>