default/objects/CCS_Limit__c/fields/Pocet_objednanych_karet__c.field-meta.xml
<CustomField>
    <fullName>Pocet_objednanych_karet__c</fullName>
    <description>Počet objednaných karet.</description>
    <inlineHelpText>Počet objednaných karet.</inlineHelpText>
    <label>Počet objednaných karet</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>