default/objects/CCS_Limit__c/fields/Vydani_karet_cena__c.field-meta.xml
<CustomField>
    <fullName>Vydani_karet_cena__c</fullName>
    <description>Vydání karet cena.</description>
    <inlineHelpText>Vydání karet cena.</inlineHelpText>
    <label>Vydání karet cena</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>