default/objects/CCS_Limit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Klient__c</columns>
    <columns>Druh_nabidky__c</columns>
    <columns>Pocet_objednanych_karet__c</columns>
    <columns>Celkova_cena__c</columns>
    <columns>Cislo_obchodniho_zastupce__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>