default/objects/CCS_Limit__c/listViews/CCS_Web_Leads_bonus_CCS_Limit.listView-meta.xml
<ListView>
    <fullName>CCS_Web_Leads_bonus_CCS_Limit</fullName>
    <filterScope>Queue</filterScope>
    <label>CCS Web Leads (bonus)</label>
    <queue>CCS_Web_Leads_bonus</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>