default/objects/CCS_Limit__c/listViews/CCS_Web_Leads_SK_CCS_Limit.listView-meta.xml
<ListView>
    <fullName>CCS_Web_Leads_SK_CCS_Limit</fullName>
    <filterScope>Queue</filterScope>
    <label>CCS Web Leads SK</label>
    <queue>CCS_Web_Leads_SK</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>